@@ -1,6 +1,7 @@
 --------------------------
 Changes in 1.9 (not yet released)
 
+- CLightSceneNode::updateAbsolutePosition does now light recalculations. This is to fix using animators with lights.
 - Fix collada export for objects with rotations around more than 1 axis.
 - Add ISceneNodeAnimatorCameraMaya::setTargetMinDistance and getTargetMinDistance.
 - Add override font to IGUITreeView
